bat.bool1.sumdouble.SumDouble.scala.error
Compilation error:
SumDouble:3: error: reassignment to val
  if (a=b) {
       ^